CREATE TYPE "ai_task_type" AS ENUM (
  'POSTING_COMPETENCY_EXTRACTION',
  'EXPERIENCE_INTAKE',
  'MATCH',
  'DRAFT'
);

CREATE TYPE "ai_task_status" AS ENUM (
  'PENDING',
  'RUNNING',
  'COMPLETED',
  'FAILED'
);

CREATE TABLE "ai_tasks" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "task_type" ai_task_type NOT NULL,
  "status" ai_task_status NOT NULL DEFAULT 'PENDING',
  "external_user_id" bigint,
  "external_job_posting_id" bigint,
  "external_question_id" bigint,
  "idempotency_key" varchar(128) UNIQUE NOT NULL,
  "input_hash" varchar(64) NOT NULL,
  "model" varchar(100),
  "prompt_version" varchar(50),
  "algorithm_version" varchar(50),
  "request_payload" jsonb NOT NULL,
  "result_payload" jsonb,
  "retry_count" integer NOT NULL DEFAULT 0,
  "total_tokens" integer,
  "latency_ms" integer,
  "error_code" varchar(100),
  "error_message" text,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "started_at" timestamptz,
  "completed_at" timestamptz
);

CREATE TABLE "ai_task_attempts" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "ai_task_id" bigint NOT NULL,
  "attempt_no" integer NOT NULL,
  "status" ai_task_status NOT NULL,
  "error_code" varchar(100),
  "error_message" text,
  "started_at" timestamptz NOT NULL,
  "finished_at" timestamptz
);

CREATE INDEX ON "ai_tasks" ("status", "created_at");

CREATE INDEX ON "ai_tasks" ("task_type", "external_user_id", "status");

CREATE INDEX ON "ai_tasks" ("task_type", "external_job_posting_id", "status");

CREATE UNIQUE INDEX ON "ai_task_attempts" ("ai_task_id", "attempt_no");

COMMENT ON TABLE "ai_tasks" IS '필수 대상 규칙 (CHECK로 강제됨, ai_service_final_constraints.sql의 ck_ai_task_targets):
- POSTING_COMPETENCY_EXTRACTION: external_job_posting_id
- EXPERIENCE_INTAKE: external_user_id
- MATCH: external_user_id + external_job_posting_id
- DRAFT: external_user_id + external_question_id
request_payload에는 DRAFT의 experienceIds 등 실행 시점 입력 스냅샷을 저장한다.

[리뷰 추가] task_type별 "동시에 진행 중인 작업 1개" 보장이 API 명세의 409 DRAFT_ALREADY_RUNNING과
직결되는데 idempotency_key(입력값 기반 해시)만으로는 입력이 달라지면 우회된다.
ai_service_final_constraints.sql에 (external_user_id/question_id/job_posting_id) 기준
PENDING/RUNNING 상태에 대한 부분 유니크 인덱스 3개를 추가했다.';

COMMENT ON COLUMN "ai_tasks"."external_user_id" IS 'EXPERIENCE_INTAKE/MATCH/DRAFT 대상 사용자';

COMMENT ON COLUMN "ai_tasks"."external_job_posting_id" IS 'POSTING_COMPETENCY_EXTRACTION/MATCH 대상 공고. 문항 추출도 이 작업 결과에 함께 포함된다고 가정 — job_posting_questions.source_ai_task_id 참고';

COMMENT ON COLUMN "ai_tasks"."external_question_id" IS 'DRAFT 대상 job_posting_questions.id';

COMMENT ON COLUMN "ai_tasks"."idempotency_key" IS 'task type + 대상 ID + input hash + 모델/프롬프트 버전 해시';

COMMENT ON COLUMN "ai_tasks"."retry_count" IS 'CHECK >= 0는 ai_service_final_constraints.sql';

COMMENT ON COLUMN "ai_tasks"."total_tokens" IS 'CHECK IS NULL OR >= 0는 ai_service_final_constraints.sql';

COMMENT ON COLUMN "ai_tasks"."latency_ms" IS 'CHECK IS NULL OR >= 0는 ai_service_final_constraints.sql';

COMMENT ON COLUMN "ai_tasks"."started_at" IS '상태-시각 정합성 CHECK는 ai_service_final_constraints.sql';

COMMENT ON COLUMN "ai_task_attempts"."attempt_no" IS 'CHECK > 0는 ai_service_final_constraints.sql';

ALTER TABLE "ai_task_attempts" ADD FOREIGN KEY ("ai_task_id") REFERENCES "ai_tasks" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;
