// Career Lab — Career DB v6 (2026-09-03)
// v5 → v6: 팀 회의 결정 반영.
//   공고: role·source·question_status·active_question_count·unmatched_terms·collected_at 삭제. deadline은 timestamptz(시각 포함). analyzed_at 유지
//   문항: 관리자 일괄 관리. intent·requirements·source·is_active 삭제 → (job_posting_id, sequence) 일반 UNIQUE
//   경험: period_label·sort_date → start_date·end_date(NULL 허용). source·intake_evidence·intake_edited_fields 삭제 (출처는 ai_task_id 유무)
//   답변: source 삭제 (출처는 ai_task_id 유무)
//   매칭: computed_at 삭제 → updated_at. input_hash = sha256(경험·역량·강도 목록 + 공고 요구 역량 목록)
//   역량: 별칭은 팀 결정대로 별도 테이블(competency_aliases) 유지. 범주는 enum 코드값
//   AI: 별도 DB 없음. ai_tasks는 Career DB에 두고 Python AI 서버는 상태 없이 호출만 받는다. 인테이크 첨부파일은 Supabase Storage에 두고 URL만 request_payload에 기록
// 사용법: dbdiagram.io에 그대로 붙여 넣는다. CHECK·부분 UNIQUE·GIN·INCLUDE·트리거는 docs/api-spec-v6.md 부록(Flyway V2).

Project career_lab_v6 {
  database_type: 'PostgreSQL'
  note: '''
    Career DB 13개 테이블, 외래키 19개.
    - 사용자 식별: users(slack_team_id, slack_user_id) UNIQUE — V1__create_users.sql과 동일
    - 매칭: job_matches(user_id, job_posting_id) 1행. 경험 변경 시 활성 공고 전체에 MATCH 작업
    - 자소서: cover_letter_answers(user_id, question_id) 1행 + used_experience_ids 배열
    - 관련 공고: 같은 기업은 company_id, 비슷한 직무는 posting_competencies 겹침 수로 계산 (role 없음)
  '''
}

// ───────────────────────── Enums ─────────────────────────

Enum competency_category {
  ROLE   [note: '직무 역량 (약칭 직무)']
  TECH   [note: '기술·언어 (기술)']
  SOFT   [note: '일하는 방식 (협업)']
  DOMAIN [note: '산업 (산업)']
  VALUE  [note: '인재상 (인재상)']
}

Enum experience_category {
  TEAM_PROJECT     [note: '팀 프로젝트']
  PERSONAL_PROJECT [note: '개인 프로젝트']
  PRACTICE_PROJECT [note: '실습 프로젝트']
  EXTERNAL_ACTIVITY [note: '대외활동']
  EMPLOYMENT       [note: '인턴·근무']
  AWARD_CERTIFICATE [note: '수상·자격']
}

Enum posting_status {
  ACTIVE
  CLOSED [note: 'deadline 경과 후 배치가 전환. 조회는 deadline 기준으로도 판정 가능']
}

Enum match_verdict {
  RECOMMEND   [note: 'match_score >= 0.85 → "지원 권장"']
  CONDITIONAL [note: 'match_score >= 0.62 → "조건부 지원"']
  HOLD        [note: '그 외 → "보강 필요"']
}

Enum ai_task_type {
  POSTING_ANALYSIS  [note: '공고 원문 → 요구 역량·가중치·근거']
  EXPERIENCE_INTAKE [note: '링크·첨부파일 → 경험 후보']
  MATCH             [note: '사용자 경험 × 공고 요구 역량 → 커버리지·판정']
  DRAFT             [note: '문항 + 선택 경험 → 자소서 초안']
}

Enum ai_task_status {
  PENDING
  RUNNING
  COMPLETED
  FAILED
}

// ───────────────────────── 사용자 ─────────────────────────

Table users {
  id            bigint       [pk, increment]
  slack_team_id varchar(32)  [not null]
  slack_user_id varchar(32)  [not null]
  display_name  varchar(100) [not null]
  email         varchar(320)
  avatar_url    varchar(1000) [note: 'V1 적용분 그대로. 화면 미사용']
  created_at    timestamptz  [not null, default: `now()`]
  last_login_at timestamptz  [not null, default: `now()`]

  Indexes {
    (slack_team_id, slack_user_id) [unique, name: 'uk_users_slack_identity']
  }
  note: '이미 적용된 V1__create_users.sql과 동일'
}

// ───────────────────────── 역량 사전 ─────────────────────────

Table competencies {
  id         bigint              [pk, increment]
  name       varchar(100)        [not null, unique, note: '카드 태그·필터 칩·매칭 표. 현재 사전 51개']
  category   competency_category [not null]
  created_at timestamptz         [not null, default: `now()`]
  updated_at timestamptz         [not null, default: `now()`]
  note: '앱 시작 시 별칭과 함께 메모리 캐시'
}

Table competency_aliases {
  id            bigint       [pk, increment]
  competency_id bigint       [not null]
  alias         varchar(100) [not null, unique, note: '별칭 하나는 표준 역량 하나만. AI 분석 프롬프트의 사전 입력']
  created_at    timestamptz  [not null, default: `now()`]

  Indexes {
    competency_id
  }
}

// ───────────────────────── 경험 ─────────────────────────

Table experiences {
  id         bigint              [pk, increment]
  user_id    bigint              [not null]
  title      varchar(200)        [not null]
  category   experience_category [not null, note: '등록 대화상자의 분류 6종']
  start_date date                [note: 'NULL 허용(기간 미입력). 월 입력은 1일로 저장']
  end_date   date                [note: 'NULL이면 진행 중 또는 단일 월. CHECK end_date >= start_date']
  situation  text
  task       text
  action     text
  result     text                [not null, note: '화면 필수(R)']
  ai_task_id bigint              [note: 'NULL이면 직접 입력, 값이 있으면 인테이크로 등록. 출처 컬럼 대신 이 값으로 구분']
  created_at timestamptz         [not null, default: `now()`]
  updated_at timestamptz         [not null, default: `now()`]

  Indexes {
    (user_id, start_date)
  }
}

Table experience_competencies {
  experience_id bigint       [not null]
  competency_id bigint       [not null]
  strength      decimal(3,2) [not null, default: 0.70, note: '약 0.4 · 중 0.7 · 강 0.9. CHECK 0~1']
  created_at    timestamptz  [not null, default: `now()`]

  Indexes {
    (experience_id, competency_id) [pk]
    competency_id
  }
  note: '유지: 경험 관리의 역량 칩 필터가 competency_id로 조회'
}

// ───────────────────────── 공고 ─────────────────────────

Table companies {
  id              bigint       [pk, increment]
  name            varchar(200) [not null]
  normalized_name varchar(200) [not null, unique, note: '수집 시 회사 중복 제거 기준']
  career_url      varchar(1000)
  created_at      timestamptz  [not null, default: `now()`]
  updated_at      timestamptz  [not null, default: `now()`]
}

Table job_postings {
  id          bigint         [pk, increment]
  company_id  bigint         [not null]
  position    varchar(200)   [not null, note: '직무명. 직무 계열 컬럼 없음 — 비슷한 직무는 요구 역량 태그 겹침으로 판단']
  content     text           [not null, note: '원문. 목록 DTO에서는 제외']
  source_url  varchar(1000)  [unique]
  deadline    timestamptz    [not null, note: 'v6: 시각 포함. 화면 "2026-09-12 18:00 마감", D-day·마감 판정 기준']
  status      posting_status [not null, default: 'ACTIVE']
  analyzed_at timestamptz    [note: 'AI 분석(연관 태그 생성) 완료 시각. NULL이면 매칭률 미표시']
  created_at  timestamptz    [not null, default: `now()`]
  updated_at  timestamptz    [not null, default: `now()`]

  Indexes {
    (status, deadline)
    (company_id, deadline)
  }
}

Table posting_competencies {
  job_posting_id bigint       [not null]
  competency_id  bigint       [not null]
  weight         decimal(3,2) [not null, note: '0.5~1.0. CHECK 0~1']
  evidence_line  text         [not null, note: '공고 원문 문장 그대로. 매칭 표 "공고 근거"']
  created_at     timestamptz  [not null, default: `now()`]
  updated_at     timestamptz  [not null, default: `now()`]

  Indexes {
    (job_posting_id, competency_id) [pk]
    competency_id
  }
  note: '유지: 홈의 역량 다중 필터, 관련 공고(태그 겹침), 연관 태그 표시'
}

Table job_posting_questions {
  id             bigint      [pk, increment]
  job_posting_id bigint      [not null]
  sequence       integer     [not null, note: 'CHECK > 0']
  prompt_text    text        [not null]
  length_limit   integer     [note: '글자 수. NULL이면 제한 없음. CHECK > 0']
  created_at     timestamptz [not null, default: `now()`]
  updated_at     timestamptz [not null, default: `now()`]

  Indexes {
    (job_posting_id, sequence) [unique]
  }
  note: '관리자가 일괄 관리. 사용자 등록·삭제 없음'
}

// ───────────────────────── 사용자 × 공고 ─────────────────────────

Table bookmarks {
  user_id        bigint      [not null]
  job_posting_id bigint      [not null]
  created_at     timestamptz [not null, default: `now()`]

  Indexes {
    (user_id, job_posting_id) [pk]
  }
}

Table job_matches {
  id             bigint        [pk, increment]
  user_id        bigint        [not null]
  job_posting_id bigint        [not null]
  match_score    decimal(4,3)  [not null, note: '0~1. API는 0~100으로 변환']
  verdict        match_verdict [not null]
  covered_count  integer       [not null, note: '갭이 아닌 요구 역량 수']
  coverage       jsonb         [not null, note: '[{"competencyId":3,"weight":0.9,"score":1.0,"isGap":false,"experiences":[{"id":1,"strength":0.8}]}]']
  input_hash     varchar(64)   [not null, note: 'sha256(경험 [id,competency_id,strength] 정렬 + 공고 [competency_id,weight] 정렬). 모델·프롬프트 버전은 넣지 않는다']
  created_at     timestamptz   [not null, default: `now()`]
  updated_at     timestamptz   [not null, default: `now()`, note: 'v6: computed_at 대신. 결과 반영 시각']

  Indexes {
    (user_id, job_posting_id) [unique]
  }
  note: '최신 결과 1행. (user_id, match_score DESC) INCLUDE 인덱스는 constraints SQL. 계산 중 여부는 ai_tasks에서'
}

// ───────────────────────── 자기소개서 ─────────────────────────

Table cover_letter_answers {
  id                  bigint      [pk, increment]
  user_id             bigint      [not null]
  question_id         bigint      [not null]
  content             text        [not null]
  char_count          integer     [not null, default: 0, note: 'CHECK >= 0. 서버 계산']
  used_experience_ids "bigint[]"  [not null, default: `'{}'`, note: '근거 경험. 본문과 함께 저장. GIN. 소유자 일치는 서비스에서 검사']
  ai_task_id          bigint      [note: 'NULL이면 직접 작성, 값이 있으면 AI 초안 반영. PUT의 draftTaskId']
  created_at          timestamptz [not null, default: `now()`]
  updated_at          timestamptz [not null, default: `now()`, note: '화면 "HH:MM 저장됨"']

  Indexes {
    (user_id, question_id) [unique]
    question_id
  }
}

// ───────────────────────── AI 작업 ─────────────────────────

Table ai_tasks {
  id              bigint         [pk, increment]
  task_type       ai_task_type   [not null]
  status          ai_task_status [not null, default: 'PENDING']
  user_id         bigint         [note: 'INTAKE·MATCH·DRAFT. 분석은 NULL']
  job_posting_id  bigint         [note: 'POSTING_ANALYSIS·MATCH. 공고 삭제 시 CASCADE']
  question_id     bigint         [note: 'DRAFT. 문항 삭제 시 CASCADE']
  idempotency_key varchar(128)   [not null, unique, note: 'sha256(type + 대상 ID + input_hash + prompt_version). 중복 요청은 기존 taskId 반환']
  input_hash      varchar(64)    [not null]
  model           varchar(100)   [note: 'AI 응답의 model. mock이면 mock']
  prompt_version  varchar(50)    [note: 'AI 응답의 promptVersion. 예 posting_analysis/v2']
  request_payload jsonb          [not null, note: '입력 스냅샷. 인테이크는 links[]와 Storage에 올린 fileUrls[]']
  result_payload  jsonb
  retry_count     integer        [not null, default: 0]
  attempts        jsonb          [not null, default: '[]', note: '[{"no":1,"status":"FAILED","latencyMs":812,"errorCode":"TIMEOUT","at":"..."}]']
  error_code      varchar(100)
  error_message   text
  created_at      timestamptz    [not null, default: `now()`]
  started_at      timestamptz
  completed_at    timestamptz

  Indexes {
    (status, created_at)
    (task_type, user_id, status)
    (task_type, job_posting_id, status)
  }
  note: '진행 중 1개 부분 UNIQUE: DRAFT(user_id, question_id) · EXPERIENCE_INTAKE(user_id) · POSTING_ANALYSIS(job_posting_id). MATCH는 제외하고 input_hash로 검증'
}

// ───────────────────────── 관계 19개 ─────────────────────────

Ref: competency_aliases.competency_id > competencies.id [delete: cascade]

Ref: experiences.user_id > users.id [delete: cascade]
Ref: experiences.ai_task_id > ai_tasks.id [delete: set null]
Ref: experience_competencies.experience_id > experiences.id [delete: cascade]
Ref: experience_competencies.competency_id > competencies.id [delete: restrict]

Ref: job_postings.company_id > companies.id [delete: restrict]
Ref: posting_competencies.job_posting_id > job_postings.id [delete: cascade]
Ref: posting_competencies.competency_id > competencies.id [delete: restrict]
Ref: job_posting_questions.job_posting_id > job_postings.id [delete: cascade]

Ref: bookmarks.user_id > users.id [delete: cascade]
Ref: bookmarks.job_posting_id > job_postings.id [delete: cascade]
Ref: job_matches.user_id > users.id [delete: cascade]
Ref: job_matches.job_posting_id > job_postings.id [delete: cascade]

Ref: cover_letter_answers.user_id > users.id [delete: cascade]
Ref: cover_letter_answers.question_id > job_posting_questions.id [delete: restrict]
Ref: cover_letter_answers.ai_task_id > ai_tasks.id [delete: set null]

Ref: ai_tasks.user_id > users.id [delete: cascade]
Ref: ai_tasks.job_posting_id > job_postings.id [delete: cascade]
Ref: ai_tasks.question_id > job_posting_questions.id [delete: cascade]
